[gd_scene load_steps=16 format=3 uid="uid://bdq0multbciq5"]

[ext_resource type="Script" path="res://Scripts/UI-Components/Map/difficulty_selection.gd" id="1_7bivs"]
[ext_resource type="FontFile" uid="uid://b0ev28ueo51cu" path="res://Assets/Fonts/5_Minecraft AE(支持中文).ttf" id="1_e0cwk"]
[ext_resource type="Texture2D" uid="uid://rghpqt7gkkud" path="res://Assets/Images/UI/Maps/难度卡片.png" id="2_2gk4n"]
[ext_resource type="Texture2D" uid="uid://b66f0nqktr8s1" path="res://Assets/Images/UI/Maps/难度卡片hover.png" id="3_vbkod"]
[ext_resource type="Texture2D" uid="uid://bivq3u4xnj4px" path="res://Assets/Images/UI/Maps/easy.png" id="4_puqgk"]
[ext_resource type="Texture2D" uid="uid://dwfa1a5oucaf3" path="res://Assets/Images/UI/Maps/medium.png" id="5_lauux"]
[ext_resource type="Texture2D" uid="uid://d4bdrwa2kowve" path="res://Assets/Images/UI/Maps/hard.png" id="6_7arlw"]
[ext_resource type="AudioStream" uid="uid://i0to3f5pe1rc" path="res://Assets/Sounds/FXs/UIs/MC_Click.mp3" id="8_jh51t"]

[sub_resource type="Animation" id="Animation_dtnrg"]
resource_name = "Entry"
length = 0.8
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyCard:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(113, -0.25, 0, 0.25, 0, 113, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EasyCard:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1370, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EasyCard:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NormalCard:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(785, -0.25, 0, 0.25, 0, 785, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NormalCard:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1370, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NormalCard:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HardCar:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1448, -0.25, 0, 0.25, 0, 1448, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HardCar:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1370, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HardCar:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:modulate:r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".:modulate:g")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:modulate:b")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:modulate:a")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("EasyCard:mouse_filter")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("NormalCard:mouse_filter")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("HardCar:mouse_filter")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="Animation" id="Animation_eswp1"]
resource_name = "Exit"
length = 0.8
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}

[sub_resource type="Animation" id="Animation_1k58v"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyCard:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(113, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EasyCard:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EasyCard:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NormalCard:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(785, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NormalCard:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NormalCard:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HardCar:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1448, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HardCar:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HardCar:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:modulate:r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".:modulate:g")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:modulate:b")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:modulate:a")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("EasyCard:mouse_filter")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("NormalCard:mouse_filter")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("HardCar:mouse_filter")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h38mx"]
_data = {
"Entry": SubResource("Animation_dtnrg"),
"Exit": SubResource("Animation_eswp1"),
"RESET": SubResource("Animation_1k58v")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_oprsd"]
atlas = ExtResource("2_2gk4n")
region = Rect2(128, 211, 382, 594)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwvh5"]
atlas = ExtResource("2_2gk4n")
region = Rect2(128, 211, 382, 594)

[sub_resource type="AtlasTexture" id="AtlasTexture_agfsj"]
atlas = ExtResource("3_vbkod")
region = Rect2(116, 199, 405, 618)

[node name="DifficultySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bivs")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -384.0
offset_right = 2122.0
offset_bottom = -312.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.475276, 0.475276)
theme_override_fonts/font = ExtResource("1_e0cwk")
theme_override_font_sizes/font_size = 72
text = "难度选择"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h38mx")
}
autoplay = "Entry"

[node name="EasyCard" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 312.0
offset_right = 495.0
offset_bottom = 906.0
scale = Vector2(0.811301, 0.811301)
texture_normal = SubResource("AtlasTexture_oprsd")
texture_pressed = SubResource("AtlasTexture_vwvh5")
texture_hover = SubResource("AtlasTexture_agfsj")
stretch_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="EasyCard"]
position = Vector2(154.074, 139.283)
texture = ExtResource("4_puqgk")
region_enabled = true
region_rect = Rect2(15, 165, 414, 361)

[node name="NameLabel" type="Label" parent="EasyCard"]
layout_mode = 0
offset_left = 10.0
offset_top = 327.0
offset_right = 374.0
offset_bottom = 586.0
theme_override_colors/font_color = Color(0, 0.707319, 0.205765, 1)
theme_override_fonts/font = ExtResource("1_e0cwk")
theme_override_font_sizes/font_size = 64
text = "简单"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NormalCard" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 785.0
offset_top = 312.0
offset_right = 1167.0
offset_bottom = 906.0
scale = Vector2(0.811301, 0.811301)
texture_normal = SubResource("AtlasTexture_oprsd")
texture_pressed = SubResource("AtlasTexture_vwvh5")
texture_hover = SubResource("AtlasTexture_agfsj")
stretch_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="NormalCard"]
position = Vector2(152.841, 126.957)
texture = ExtResource("5_lauux")
region_enabled = true
region_rect = Rect2(14, 139, 506, 387)

[node name="NameLabel" type="Label" parent="NormalCard"]
layout_mode = 0
offset_left = 10.0
offset_top = 327.0
offset_right = 374.0
offset_bottom = 586.0
theme_override_colors/font_color = Color(1, 0.313726, 0, 1)
theme_override_fonts/font = ExtResource("1_e0cwk")
theme_override_font_sizes/font_size = 64
text = "普通"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HardCar" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1448.0
offset_top = 312.0
offset_right = 1830.0
offset_bottom = 906.0
scale = Vector2(0.811301, 0.811301)
texture_normal = SubResource("AtlasTexture_oprsd")
texture_pressed = SubResource("AtlasTexture_vwvh5")
texture_hover = SubResource("AtlasTexture_agfsj")
stretch_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="HardCar"]
position = Vector2(188.586, 157.771)
texture = ExtResource("6_7arlw")
region_enabled = true
region_rect = Rect2(72, 201, 395, 325)

[node name="NameLabel" type="Label" parent="HardCar"]
layout_mode = 0
offset_left = 10.0
offset_top = 327.0
offset_right = 374.0
offset_bottom = 586.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_e0cwk")
theme_override_font_sizes/font_size = 64
text = "困难"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 424.0
offset_bottom = 467.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_e0cwk")
theme_override_font_sizes/font_size = 42
text = "难度可在后续随时更改"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jh51t")
volume_db = 4.0
bus = &"Sound"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="mouse_entered" from="EasyCard" to="." method="_on_easy_card_mouse_entered"]
[connection signal="mouse_exited" from="EasyCard" to="." method="_on_easy_card_mouse_exited"]
[connection signal="pressed" from="EasyCard" to="." method="_on_easy_card_pressed"]
[connection signal="mouse_entered" from="NormalCard" to="." method="_on_normal_card_mouse_entered"]
[connection signal="mouse_exited" from="NormalCard" to="." method="_on_normal_card_mouse_exited"]
[connection signal="pressed" from="NormalCard" to="." method="_on_normal_card_pressed"]
[connection signal="mouse_entered" from="HardCar" to="." method="_on_hard_car_mouse_entered"]
[connection signal="mouse_exited" from="HardCar" to="." method="_on_hard_car_mouse_exited"]
[connection signal="pressed" from="HardCar" to="." method="_on_hard_car_pressed"]
